# IGVC

./: CMakeLists.txt
ros_ws/src/arudino/motor/: motor.ino.orig
ros_ws/src/control/launch/: camera.launch  robot.launch
ros_ws/src/navigation/: CMakeLists.txt  package.xml
ros_ws/src/navigation/scripts/: NeuralNetwork.py  goal_seeking.fcl  navigation_node.py  obstacle_avoidance_turn.fcl  obstacle_direction.fcl  obstacle_linear.fcl  obstacle_weight.fcl
ros_ws/src/robot_description/urdf/: igvc_gazebo.urdf.xacro
ros_ws/src/robot_gazebo/launch/: igvc_basic_simulation.launch
