cmake_minimum_required(VERSION 3.3)
project(IGVC)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ros_ws/build/catkin/catkin_generated/version/package.cmake
    ros_ws/build/catkin_generated/installspace/_setup_util.py
    ros_ws/build/catkin_generated/installspace/env.sh
    ros_ws/build/catkin_generated/installspace/setup.bash
    ros_ws/build/catkin_generated/installspace/setup.sh
    ros_ws/build/catkin_generated/installspace/setup.zsh
    ros_ws/build/catkin_generated/stamps/Project/interrogate_setup_dot_py.py.stamp
    ros_ws/build/catkin_generated/stamps/Project/order_packages.cmake.em.stamp
    ros_ws/build/catkin_generated/stamps/Project/package.xml.stamp
    ros_ws/build/catkin_generated/env_cached.sh
    ros_ws/build/catkin_generated/generate_cached_setup.py
    ros_ws/build/catkin_generated/order_packages.cmake
    ros_ws/build/catkin_generated/order_packages.py
    ros_ws/build/catkin_generated/setup_cached.sh
    ros_ws/build/CMakeFiles/2.8.12.2/CompilerIdC/a.out
    ros_ws/build/CMakeFiles/2.8.12.2/CompilerIdC/CMakeCCompilerId.c
    ros_ws/build/CMakeFiles/2.8.12.2/CompilerIdCXX/a.out
    ros_ws/build/CMakeFiles/2.8.12.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    ros_ws/build/CMakeFiles/2.8.12.2/CMakeCCompiler.cmake
    ros_ws/build/CMakeFiles/2.8.12.2/CMakeCXXCompiler.cmake
    ros_ws/build/CMakeFiles/2.8.12.2/CMakeDetermineCompilerABI_C.bin
    ros_ws/build/CMakeFiles/2.8.12.2/CMakeDetermineCompilerABI_CXX.bin
    ros_ws/build/CMakeFiles/2.8.12.2/CMakeSystem.cmake
    ros_ws/build/CMakeFiles/clean_test_results.dir/build.make
    ros_ws/build/CMakeFiles/clean_test_results.dir/cmake_clean.cmake
    ros_ws/build/CMakeFiles/clean_test_results.dir/DependInfo.cmake
    ros_ws/build/CMakeFiles/clean_test_results.dir/progress.make
    ros_ws/build/CMakeFiles/download_extra_data.dir/build.make
    ros_ws/build/CMakeFiles/download_extra_data.dir/cmake_clean.cmake
    ros_ws/build/CMakeFiles/download_extra_data.dir/DependInfo.cmake
    ros_ws/build/CMakeFiles/download_extra_data.dir/progress.make
    ros_ws/build/CMakeFiles/doxygen.dir/build.make
    ros_ws/build/CMakeFiles/doxygen.dir/cmake_clean.cmake
    ros_ws/build/CMakeFiles/doxygen.dir/DependInfo.cmake
    ros_ws/build/CMakeFiles/doxygen.dir/progress.make
    ros_ws/build/CMakeFiles/run_tests.dir/build.make
    ros_ws/build/CMakeFiles/run_tests.dir/cmake_clean.cmake
    ros_ws/build/CMakeFiles/run_tests.dir/DependInfo.cmake
    ros_ws/build/CMakeFiles/run_tests.dir/progress.make
    ros_ws/build/CMakeFiles/tests.dir/build.make
    ros_ws/build/CMakeFiles/tests.dir/cmake_clean.cmake
    ros_ws/build/CMakeFiles/tests.dir/DependInfo.cmake
    ros_ws/build/CMakeFiles/tests.dir/progress.make
    ros_ws/build/CMakeFiles/cmake.check_cache
    ros_ws/build/CMakeFiles/CMakeDirectoryInformation.cmake
    ros_ws/build/CMakeFiles/CMakeError.log
    ros_ws/build/CMakeFiles/CMakeOutput.log
    ros_ws/build/CMakeFiles/CMakeRuleHashes.txt
    ros_ws/build/CMakeFiles/Makefile.cmake
    ros_ws/build/CMakeFiles/Makefile2
    ros_ws/build/CMakeFiles/progress.marks
    ros_ws/build/CMakeFiles/TargetDirectories.txt
    ros_ws/build/control/catkin_generated/installspace/control.pc
    ros_ws/build/control/catkin_generated/installspace/controlConfig-version.cmake
    ros_ws/build/control/catkin_generated/installspace/controlConfig.cmake
    ros_ws/build/control/catkin_generated/stamps/control/package.xml.stamp
    ros_ws/build/control/catkin_generated/stamps/control/pkg.pc.em.stamp
    ros_ws/build/control/catkin_generated/ordered_paths.cmake
    ros_ws/build/control/catkin_generated/package.cmake
    ros_ws/build/control/catkin_generated/pkg.develspace.context.pc.py
    ros_ws/build/control/catkin_generated/pkg.installspace.context.pc.py
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_cpp.dir/build.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_cpp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_cpp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_cpp.dir/depend.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_cpp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_cpp.dir/progress.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_lisp.dir/build.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_lisp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_lisp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_lisp.dir/depend.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_lisp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_lisp.dir/progress.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_py.dir/build.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_py.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_py.dir/depend.internal
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_py.dir/depend.make
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_py.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/geometry_msgs_generate_messages_py.dir/progress.make
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/src/control/motor_controller.cpp.o
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/src/control/motor_controller_node.cpp.o
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/build.make
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/CXX.includecache
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/depend.internal
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/depend.make
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/flags.make
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/link.txt
    ros_ws/build/control/CMakeFiles/motor_controller_node.dir/progress.make
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/src/control/remote_control.cpp.o
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/src/control/remote_control_node.cpp.o
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/build.make
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/CXX.includecache
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/depend.internal
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/depend.make
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/flags.make
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/link.txt
    ros_ws/build/control/CMakeFiles/remote_control_node.dir/progress.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_cpp.dir/build.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_cpp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_cpp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_cpp.dir/depend.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_cpp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_cpp.dir/progress.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_lisp.dir/build.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_lisp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_lisp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_lisp.dir/depend.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_lisp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_lisp.dir/progress.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_py.dir/build.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_py.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_py.dir/depend.internal
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_py.dir/depend.make
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_py.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/roscpp_generate_messages_py.dir/progress.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_cpp.dir/build.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_cpp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_cpp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_cpp.dir/depend.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_cpp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_cpp.dir/progress.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_lisp.dir/build.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_lisp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_lisp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_lisp.dir/depend.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_lisp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_lisp.dir/progress.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_py.dir/build.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_py.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_py.dir/depend.internal
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_py.dir/depend.make
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_py.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/rosgraph_msgs_generate_messages_py.dir/progress.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_cpp.dir/build.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_cpp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_cpp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_cpp.dir/depend.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_cpp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_cpp.dir/progress.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_lisp.dir/build.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_lisp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_lisp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_lisp.dir/depend.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_lisp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_lisp.dir/progress.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_py.dir/build.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_py.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_py.dir/depend.internal
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_py.dir/depend.make
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_py.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/sensor_msgs_generate_messages_py.dir/progress.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_cpp.dir/build.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_cpp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_cpp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_cpp.dir/depend.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_cpp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_cpp.dir/progress.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_lisp.dir/build.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_lisp.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_lisp.dir/depend.internal
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_lisp.dir/depend.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_lisp.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_lisp.dir/progress.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_py.dir/build.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_py.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_py.dir/depend.internal
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_py.dir/depend.make
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_py.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/std_msgs_generate_messages_py.dir/progress.make
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/src/control/twist_mux.cpp.o
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/src/control/twist_mux_node.cpp.o
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/build.make
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/cmake_clean.cmake
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/CXX.includecache
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/depend.internal
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/depend.make
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/DependInfo.cmake
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/flags.make
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/link.txt
    ros_ws/build/control/CMakeFiles/teleop_mux_node.dir/progress.make
    ros_ws/build/control/CMakeFiles/CMakeDirectoryInformation.cmake
    ros_ws/build/control/CMakeFiles/progress.marks
    ros_ws/build/control/cmake_install.cmake
    ros_ws/build/control/CTestTestfile.cmake
    ros_ws/build/control/Makefile
    ros_ws/build/gtest/CMakeFiles/gtest.dir/build.make
    ros_ws/build/gtest/CMakeFiles/gtest.dir/cmake_clean.cmake
    ros_ws/build/gtest/CMakeFiles/gtest.dir/depend.make
    ros_ws/build/gtest/CMakeFiles/gtest.dir/DependInfo.cmake
    ros_ws/build/gtest/CMakeFiles/gtest.dir/flags.make
    ros_ws/build/gtest/CMakeFiles/gtest.dir/link.txt
    ros_ws/build/gtest/CMakeFiles/gtest.dir/progress.make
    ros_ws/build/gtest/CMakeFiles/gtest_main.dir/build.make
    ros_ws/build/gtest/CMakeFiles/gtest_main.dir/cmake_clean.cmake
    ros_ws/build/gtest/CMakeFiles/gtest_main.dir/depend.make
    ros_ws/build/gtest/CMakeFiles/gtest_main.dir/DependInfo.cmake
    ros_ws/build/gtest/CMakeFiles/gtest_main.dir/flags.make
    ros_ws/build/gtest/CMakeFiles/gtest_main.dir/link.txt
    ros_ws/build/gtest/CMakeFiles/gtest_main.dir/progress.make
    ros_ws/build/gtest/CMakeFiles/CMakeDirectoryInformation.cmake
    ros_ws/build/gtest/CMakeFiles/progress.marks
    ros_ws/build/gtest/cmake_install.cmake
    ros_ws/build/gtest/CTestTestfile.cmake
    ros_ws/build/gtest/Makefile
    ros_ws/build/CATKIN_IGNORE
    ros_ws/build/catkin_make.cache
    ros_ws/build/cmake_install.cmake
    ros_ws/build/CMakeCache.txt
    ros_ws/build/CTestTestfile.cmake
    ros_ws/build/Makefile
    ros_ws/devel/lib/control/motor_controller_node
    ros_ws/devel/lib/control/remote_control_node
    ros_ws/devel/lib/control/teleop_mux_node
    ros_ws/devel/lib/pkgconfig/control.pc
    ros_ws/devel/lib/pkgconfig/kobuki_description.pc
    ros_ws/devel/share/control/cmake/controlConfig-version.cmake
    ros_ws/devel/share/control/cmake/controlConfig.cmake
    ros_ws/devel/share/kobuki_description/cmake/kobuki_descriptionConfig-version.cmake
    ros_ws/devel/share/kobuki_description/cmake/kobuki_descriptionConfig.cmake
    ros_ws/devel/_setup_util.py
    ros_ws/devel/env.sh
    ros_ws/devel/setup.bash
    ros_ws/devel/setup.sh
    ros_ws/devel/setup.zsh
    ros_ws/src/common/constants.h
    ros_ws/src/control/include/control/motor_controller.h
    ros_ws/src/control/include/control/remote_control.h
    ros_ws/src/control/include/control/twist_mux.h
    ros_ws/src/control/src/control/motor_controller.cpp
    ros_ws/src/control/src/control/motor_controller_node.cpp
    ros_ws/src/control/src/control/remote_control.cpp
    ros_ws/src/control/src/control/remote_control_node.cpp
    ros_ws/src/control/src/control/twist_mux.cpp
    ros_ws/src/control/src/control/twist_mux_node.cpp
    igvc_doxy_config
    README.md)

add_executable(IGVC ${SOURCE_FILES})